# PawBench

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  NOTICE  README.md  README.zh-CN.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_bench.py
.githooks/: pre-commit
.github/workflows/: deploy-site.yml
docker/: BUILD_AND_PUSH_UBUNTU.md  Dockerfile.pawbench-hermes  Dockerfile.pawbench-openclaw  Dockerfile.pawbench-qwenpaw
pawbench/: backend.py  grader.py  runner.py  task_loader.py
scripts/: setup-pre-commit.sh
site/: README.md  package.json
submissions/: pawbench-4models-opusjudge-20260529__deepseek-v4-pro__hermes.json  pawbench-4models-opusjudge-20260529__deepseek-v4-pro__openclaw.json  pawbench-4models-opusjudge-20260529__deepseek-v4-pro__qwenpaw.json  pawbench-4models-opusjudge-20260529__glm-5.1__hermes.json  pawbench-4models-opusjudge-20260529__glm-5.1__openclaw.json  pawbench-4models-opusjudge-20260529__glm-5.1__qwenpaw.json  pawbench-4models-opusjudge-20260529__kimi-k2.6__hermes.json  pawbench-4models-opusjudge-20260529__kimi-k2.6__openclaw.json  pawbench-4models-opusjudge-20260529__kimi-k2.6__qwenpaw.json  pawbench-4models-opusjudge-20260529__openai.claude-opus-4-6__hermes.json  pawbench-4models-opusjudge-20260529__openai.claude-opus-4-6__openclaw.json  pawbench-4models-opusjudge-20260529__openai.claude-opus-4-6__qwenpaw.json  pawbench-4models-opusjudge-20260529__qwen3.6-27b__hermes.json  pawbench-4models-opusjudge-20260529__qwen3.6-27b__openclaw.json  pawbench-4models-opusjudge-20260529__qwen3.6-27b__qwenpaw.json  (+39 more)
(+39 files in other folders)
